--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,7 +15,7 @@ page-home {
     -o-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     //background: url('../assets/video/bg_video_1.mp4') no-repeat;
-    background-size: cover;
+    background-size: contain;
   }
   
   #bg_black {
