--- a/src/pages/etc/etc.scss
+++ b/src/pages/etc/etc.scss
@@ -1,3 +1,10 @@
 page-etc {
+    #bg_black {
+        height: 101%;
+        background: url("../assets/images/bg_black.png") 0 0 repeat;
+    }
 
+    ion-item {
+        background: #000 !important;
+    }
 }
