Firebase연동/질문화면 수정

--- a/src/pages/etc/question/question.scss
+++ b/src/pages/etc/question/question.scss
@@ -1,3 +1,11 @@
 page-question {
+    .question-wrap {
+        padding: 15px;
+    }
 
+    ion-item {
+        background: rgba(255, 255, 255, 0.8) !important;
+    }
+
+    $text-input-md-background-color: #fff;
 }
