--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,6 +30,7 @@ page-home, page-list, page-etc {
 }
 
 ion-content {
+  background-color: rgba(35, 39, 43, 0.7) !important;
   background-size: cover !important;
   background-position: center center !important;
   background-repeat: no-repeat !important;
