--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,6 +38,10 @@ ion-content {
 
 #bg_black {
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   //background: url("../assets/images/bg_black.png") 0 0 repeat;
+}
+
+ion-header::after {
+  background-image: none !important;
 }
