--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,12 +29,14 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  
-  main:       #353943
+
+  main:       #353943,
+  transparent: rgba(0, 0, 0, 0.6)
 );
 
 //$background-color: transparent; //배경
-$toolbar-background: rgba(35, 39, 43, 0.7); //헤더
+// $toolbar-background: rgba(35, 39, 43, 0.7); //헤더
+$toolbar-background: rgba(0, 0, 0, 0.6); //헤더
 //$text-color: #fff; //텍스트
 //$list-border-color: transparent; //list border
 
